--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.48.4",
     "react-native-action-button": "^2.8.0",
     "react-native-elements": "^0.17.0",
+    "react-native-google-places": "^2.4.2",
     "react-native-keyboard-aware-scrollview": "^1.1.7",
     "react-native-maps": "^0.16.4",
     "react-native-modal-datetime-picker": "^4.11.0",
