--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,6 +139,7 @@ dependencies {
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-maps')
     compile project(':react-native-google-places')
+    compile project(':react-native-image-picker')
 }
 
 // Run this once to be able to run the application with BUCK
